syntax = "proto3";

package metrics;

option go_package = "github.com/talx-hub/malerter/proto";

message Metric {
  string name = 1;
  enum Type {
    Unspecified = 0;
    Gauge = 1;
    Counter = 2;
  }
  Type type = 2;
  double value = 3;
  int64 delta = 4;
}

message MetricList {
  repeated Metric metrics = 1;
}

message BatchRequest{
  oneof payload{
    MetricList metric_list = 1;
    bytes encrypted_payload = 2;
  }
}

message BatchResponse{
  string error = 1;
}

service Metrics {
  rpc Batch(BatchRequest) returns (BatchResponse);
}
